--- a/744Project/Views/Connections/Create.cshtml
+++ b/744Project/Views/Connections/Create.cshtml
@@ -21,7 +21,7 @@
 
 
                 <div class="form-group">
-                    @Html.Label("First IP: ", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("First IP ", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">                        
                         @Html.DropDownList("ip1", new SelectList(ViewBag.ip1, ""), htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessage("ip1", "", new { @class = "text-danger" })
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.Label("Second IP: ", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Second IP ", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">                        
                         @Html.DropDownList("ip2", new SelectList(ViewBag.ip2, ""), htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessage("ip2", "", new { @class = "text-danger" })                        
@@ -39,7 +39,7 @@
 
                 @*Weight*@
                 <div class="form-group">
-                    @Html.Label("Weight: ", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Weight ", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.Editor("weight", new { htmlAttributes = new { @class = "form-control", @type = "number", @step = "any", @min = "1", @max = "500", autocomplete = "on" } })
                         @Html.ValidationMessage("weight", "", new { @class = "text-danger" })
