Updating the Save Network Configuration to work with up to 8 regions

--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -285,7 +285,7 @@
 			obj['pos'] = nodes[i].position();
 			console.log(jsonData.networkEntities);
 			console.log(nodes[i]);
-			if (nodes[i].id() != 1 && nodes[i].id() != 2 && nodes[i].id() != 3 && nodes[i].id() != 4) {
+			if (nodes[i].id() != 1 && nodes[i].id() != 2 && nodes[i].id() != 3 && nodes[i].id() != 4 && nodes[i].id() != 5 && nodes[i].id() != 6 && nodes[i].id() != 7 && nodes[i].id() != 8) {
 				console.log(jsonData.networkEntities[obj['id']]);
 				//obj['category'] = jsonData.networkEntities[obj['id']].type;//nodes[i].category;
 				obj['isActive'] = jsonData.networkEntities[obj['id']].isActive;
